# credit-risk-engine

./: .gitignore  Dockerfile.mlflow  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
api/: main.py  routes.py  schema.py
docs/: monitoring-stack-setup.md
docs/interview/: 00_DOCUMENTATION_COMPLETE.md  01_KS_Statistic.md  02_AUC_ROC.md  03_Threshold_Selection.md  04_Decision_Logic.md  05_LightGBM_Architecture.md  06_Monotonic_Constraints.md  07_Cross_Validation.md  08_Categorical_Encoding.md  09_Data_Preprocessing.md  10_Feature_Importance.md  11_SHAP_Explainability.md  12_MLflow_Tracking.md  README.md
mlruns/0/: meta.yaml
mlruns/0/6258fcd9060f49fb81c7bf21cae264d4/: meta.yaml
mlruns/866294776621734270/: meta.yaml
models/: lgb_model.pkl
notebooks/: loanpayback.ipynb
reports/: api_documentation.md  business_approval_document.md  chatgpt_summary.md  decision_policy_document.md  deployment_versioning_notes.md  end_to_end_guide.md  explainability.md  mlflow_guide.md  model_development_document.md  model_validation.md  monitoring.md  production_readiness_checklist.md
src/: monitor.py  train_pipeline.py
src/config/: config.yaml  logging.yaml
src/data/: load_data.py  preprocess.py  split.py
src/explainability/: dependence.py  shap_cache.py  shap_global.py  shap_individual.py
src/features/: build_features.py  schema.py
src/model/: evaluate.py  predict.py  thresholds.py  train.py
src/monitoring/: drift_report.py  ks_monitor.py  psi.py
src/utils/: helpers.py  metrics.py
tests/: test_data.py  test_model.py  test_psi.py
(+48 files in other folders)
